share/assets/css/tracker.css
span.status.down:after,
span.status.error:after {
  color: red;
  line-height: 1em;
  content: "▼";
}
span.status.up:after {
  color: green;
  line-height: 1em;
  content: "▲";
}
body {
  margin: 0;
}
a:link {
  color: #BE3734;
}
a:visited {
  color: #952928;
}
ul#nav li.title {
  background: #BE3734;
  text-shadow: -1px -1px 1px rgba(0,0,0,0.25), 1px 1px 1px rgba(255,255,255,0.25);
  padding-left: 20px;
  padding-right: 20px;
  box-shadow: inset -1px -1px 3px rgba(0,0,0,0.25);
  margin-right: 10px;
}
ul#nav li.title a {
  color: #fff;
  font-weight: normal;
}
ul#nav li.title a:hover {
  color: #fff;
}
ul#nav {
  list-style: none;
  margin: 0;
  padding: 0;
  background: #111;
  overflow: hidden;
}
ul#nav li.nav-back {
  float: right;
  padding-right: 20px;
}
ul#nav li.nav-back a {
  font-size: 0.8em;
  font-weight: normal;
}
ul#nav li {
  float: left;
  padding: 7px 10px 5px 10px;
}
ul#nav li a {
  text-decoration: none;
  color: #ddd;
  font-weight: bold;
  -webkit-font-smoothing: antialiased;
}
ul#nav li a:hover {
  color: #fff;
}
ul#nav li:last-child {
  border-right: none;
}
body {
  font-family: sans-serif;
  font-size: 14px;
}
.field-note {
  font-size: 11px;
  font-style: italic;
  margin: 0;
}
.field-label {
  float: left;
  width: 150px;
  padding: 10px 10px 10px 0;
  min-height: 16px;
  text-align: right;
}
.field-label {
  color: #999;
}
.field-value {
  margin-left: 160px;
  padding: 10px;
}
.field-value.info {
  line-height: 1.3em;
}
.field-value > input[type="text"] {
  width: 300px;
}
.field-value textarea {
  width: 300px;
  height: 100px;
}
.field {
  padding: 0;
  background: #fff;
  clear: left;
}
.field:nth-child(odd) {
  background: #efefef;
}
.field .field-value{
  background: #efefef;
}
.field:nth-child(odd) .field-value{
  background: #ddd;
}
td.server-users,
td.server-tags {
  width: 180px;
}
.tag-list {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow: hidden;
}
.tag-list li {
  display: block;
  float: left;
  margin-right: 3px;
  margin-top: 3px;
  background: #3651A3;
  color: #fff;
  padding: 1px 3px;
  font-size: 11px;
}
.tag-list.user-list li {
  background: #4FA842;
}
.tag-list li a {
  color: #fff;
  text-decoration: none;
  white-space: nowrap;
  text-shadow: 0px 0px 1px rgba(0,0,0,1);
}
.tag-list li form {
  display: inline;
  margin: 0;
  padding: 0;
}
.tag-list li form input[type="submit"] {
  padding: 0;
  background: none;
  border: none;
  cursor: pointer;
  color: rgba(255,255,255,0.5);
  font-weight: normal;
  line-height: 10px;
  font-size: 10px;
}
.tag-list li form input[type="submit"]:focus {
  outline: none;
}
.tag-list li form input[type="submit"]:hover {
  color: #fff;
}
.table-list {
  width: 100%;
}
.table-list form {
  display: inline-block;
  margin: 0;
  padding: 0;
}
.table-list > thead> tr> th {
  padding: 2px 8px;
}
.table-list > tbody > tr > td {
  padding: 6px 8px;
}
form.user-input,
form.tag-input {
  margin: 0;
  display: block;
}

.user-users form,
.user-tags form,
.upload-tags form,
.server-tags form,
.server-users form {
  display: block;
  margin: 0;
}
form#new-upload .tags input[type="text"],
form.user-input input[type="text"],
form.tag-input input[type="text"] {
  width: 132px;
  margin: 0;
}
form#new-upload .tags input[type="text"]:focus,
form.user-input input[type="text"]:focus,
form.tag-input input[type="text"]:focus {
  outline: none;
}
.table-list thead > tr > th,
.table-list tbody > tr > td {
  text-align: left;
  font-size: 14px;
  vertical-align: top;
}
span.token {
  font-family: monospace;
  font-size: 12px;
}
.table-list > thead > tr > th {
  color: #999;
  font-weight: normal;
}
.table-list > tbody > tr > td:nth-child(odd) {
  background: #eee;
}
.table-list > tbody > tr:nth-child(odd) > td {
  background: #eee;
}
.table-list > tbody > tr:nth-child(odd) > td:nth-child(odd) {
  background: #ddd;
}
.server-info td {
  font-size: 11px !important;
}
.server-info td:first-child {
  text-align: right;
  font-weight: bold;
  padding-right: 5px;
}
.progress-container {
  width: 300px;
  height: 15px;
  background: #ccc;
  border: 1px solid #aaa;
  position: relative;
  border-radius: 3px;
  box-shadow: inset 1px 1px 3px rgba(0,0,0,0.25);
  display: none;
}
.progress-bar {
  width: 0px;
  position: absolute;
  left: 0px;
  top: 0px;
  bottom: 0px;
  background: #4B80FF;
  box-shadow: inset 1px 1px 3px rgba(0,0,0,0.25);
}
.progress-abort {
  position: absolute;
  left: 310px;
  top: -2px;
  margin: 0;
}
ul.file-downloads {
  list-style: none;
  margin: 0;
  padding: 0;
}
ul.file-downloads li {
  display: inline-block;
  margin-right: 5px;
}
ul.file-downloads li:after {
  content: ",";
}
ul.file-downloads li:last-child:after {
  content: "";
}
ul.file-downloads li a {
  color: inherit;
  text-decoration: none;
  padding: 0 5px;
}
ul.file-downloads a.up {
  background: #EBFEE5;
}
ul.file-downloads a.up:after {
  content: "✓";
  color: #4FA842;
  padding-left: 2px;
}
ul.file-downloads a.down {
  background: #FFEEEA;
}
ul.file-downloads a.down:after {
  content: "✗";
  color: #BE3734;
  padding-left: 2px;
}
.tt-dropdown-menu {
  background: #fff;
  width: 132px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
}
.tt-dropdown-menu p {
  margin: 0;
}
.tt-suggestion {
  padding: 3px;
}
.tt-is-under-cursor {
  background: #4B80FF;
  color: #fff;
}
.filesize {
  font-size: 0.8em;
  color: #333;
  padding-left: 2px;
}
/*
.field:first-child,
.table-list tr:first-child td:first-child {
  border-top-left-radius: 4px;
}
.field:first-child .field-value,
.table-list tr:first-child td:last-child {
  border-top-right-radius: 4px;
}
.field:last-child,
.table-list tr:last-child td:first-child {
  border-bottom-left-radius: 4px;
}
.field:last-child .field-value,
.table-list tr:last-child td:last-child {
  border-bottom-right-radius: 4px;
}
*/
#follow-tag,
#follow-user {
  float: right;
}
.container {
  padding: 10px 20px;
}
h2 {
  margin-top: 5px;
  margin-bottom: 10px;
  border-bottom: 3px solid #eee;
}
h3 {
  border-bottom: 1px solid #eee;
  margin-bottom: 10px;
  margin-top: 20px;
}
h2 a {
  text-decoration: none;
}
#follower-count {
  padding: 2px 10px;
  margin-right: 5px;
  font-size: 11px;
  text-align: center;
  line-height: 11px;
  color: #fff;
  text-shadow: 0px 0px 2px rgba(0,0,0,0.5);
  background: #aaa;
  border-radius: 10px;
  box-shadow: inset 0px 1px 3px rgba(0,0,0,0.5);
}
.upload-image {
  float: right;
  padding: 6px;
  background: #ccc;
  box-shadow: inset 0px 1px 3px rgba(0,0,0,0.5);
}
.upload-image img {
  display: block;
  max-width: 250px;
  max-height: 250px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
}
#new-upload {
  max-width: 600px;
}
#streamer audio {
  width: 300px;
  height: 30px;
}
ul#streamer-tracks {
  margin: 0;
  list-style: none;
  padding: 0;
  max-height: 100px;
  overflow: auto;
  background: #ccc;
  box-shadow: inset 0px 1px 3px rgba(0,0,0,0.5);
  margin-top: 5px;
}
#streamer {
  width: 300px;
}
ul#streamer-tracks a.audio {
  text-decoration: none;
  display: block;
  border-top: none;
  padding: 2px 4px;
  font-size: 11px;
  color: #333;
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
}
ul#streamer-tracks li:last-child a.audio {
  border-bottom: none;
}
ul#streamer-tracks a.audio:hover {
  color: #000;
}
ul#streamer-tracks a.audio.selected {
  background: #fff;
  color: #000;
  border-color: #ccc;
  box-shadow: 0 1px 3px rgba(0,0,0,0.25);
}
ul#streamer-tracks li:first-child a.audio.selected {
  border-top: 1px solid #ccc;
}
ul#streamer-tracks li:last-child a.audio.selected {
  border-bottom: 1px solid #ccc;
}

